Fix for images on mobile

--- a/src/includes/style.css
+++ b/src/includes/style.css
@@ -323,6 +323,8 @@ body {
     margin-left: auto;
     margin-right: auto;
     width: auto;
+    height: auto;
+    max-width: 100%;
     max-height: 700px;
     margin-top: 7%;
     margin-bottom: 7%;
